--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-calendar {
+  width: 100% !important; 
+  border: none !important;
+  font-family: "Inter" sans-serif !important;
+}
+
+.react-calendar__month-view__weekdays__weekday > abbr{
+  text-decoration: none;
+}
+
+.react-calendar__navigation__label__labelText{
+  font-weight: 600;
+}
+
+.react-calendar__tile--active {
+  background: #C3EBFA !important;
+  color: black !important;
+
+}
