--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,22 +2,115 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Calendar */
 .react-calendar {
-  width: 100% !important; 
+  width: 100% !important;
   border: none !important;
   font-family: "Inter" sans-serif !important;
 }
 
-.react-calendar__month-view__weekdays__weekday > abbr{
+.react-calendar__month-view__weekdays__weekday > abbr {
   text-decoration: none;
 }
 
-.react-calendar__navigation__label__labelText{
+.react-calendar__navigation__label__labelText {
   font-weight: 600;
 }
 
 .react-calendar__tile--active {
-  background: #C3EBFA !important;
+  background: #c3ebfa !important;
   color: black !important;
+}
 
+/* Big calendar */
+.rbc-btn-group:first-child {
+  display: none !important;
+}
+.rbc-btn-group:last-child {
+  font-size: 14px !important;
+}
+
+.rbc-btn-group:last-child button {
+  border: none !important;
+  background-color: #f1f0ff !important;
+  margin-left: 2px !important;
+}
+
+.rbc-toolbar-label {
+  text-align: right !important;
+  padding: 0 20px !important;
+}
+
+.rbc-toolbar button.rbc-active {
+  background-color: #dbdafe !important;
+  box-shadow: none !important;
+}
+
+.rbc-time-view {
+  border-color: #eee !important;
+}
+
+.rbc-time-header {
+  display: none !important;
+}
+
+.rbc-time-content {
+  border: none !important;
+}
+
+.rbc-time-gutter.rbc-time-column {
+  font-size: 12px !important;
+}
+
+.rbc-time-gutter.rbc-time-column .rbc-timeslot-group {
+  padding: 0 20px !important;
+}
+
+.rbc-timeslot-group {
+  background-color: #f7fdff !important;
+}
+
+.rbc-day-slot {
+  font-size: 14px !important;
+}
+
+.rbc-event {
+  border: none !important ;
+  color: black !important;
+  padding: 10px !important;
+  margin: 10px !important;
+  width: 99% !important;
+}
+
+.rbc-event:nth-child(1) {
+  background-color: #e2f8ff !important;
+}
+.rbc-event:nth-child(2) {
+  background-color: #fefce8 !important;
+}
+.rbc-event:nth-child(3) {
+  background-color: #f2f1ff !important;
+}
+.rbc-event:nth-child(4) {
+  background-color: #e2f8ff !important;
+}
+.rbc-event:nth-child(5) {
+  background-color: #fefce8 !important;
+}
+.rbc-event:nth-child(6) {
+  background-color: #f2f1ff !important;
+}
+.rbc-event:nth-child(7) {
+  background-color: #e2f8ff !important;
+}
+.rbc-event:nth-child(8) {
+  background-color: #fefce8 !important;
+}
+.rbc-event:nth-child(9) {
+  background-color: #f2f1ff !important;
+}
+
+.rbc-event-label {
+  color: gray !important;
+  margin-bottom: 10px;
 }
