--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Calendar */
 .react-calendar {
   width: 100% !important;
   border: none !important;
-  font-family: "Inter" sans-serif !important;
-}
-
-.react-calendar__month-view__weekdays__weekday > abbr {
-  text-decoration: none;
+  font-family: "Inter", sans-serif !important;
 }
 
 .react-calendar__navigation__label__labelText {
@@ -18,27 +13,27 @@
 }
 
 .react-calendar__tile--active {
-  background: #c3ebfa !important;
+  background-color: #c3ebfa !important;
   color: black !important;
 }
 
-/* Big calendar */
 .rbc-btn-group:first-child {
   display: none !important;
 }
+
+.rbc-toolbar-label {
+  text-align: right !important;
+  padding: 0px 20px !important;
+}
+
 .rbc-btn-group:last-child {
-  font-size: 14px !important;
+  font-size: 13px !important;
 }
 
 .rbc-btn-group:last-child button {
   border: none !important;
   background-color: #f1f0ff !important;
   margin-left: 2px !important;
-}
-
-.rbc-toolbar-label {
-  text-align: right !important;
-  padding: 0 20px !important;
 }
 
 .rbc-toolbar button.rbc-active {
@@ -63,7 +58,7 @@
 }
 
 .rbc-time-gutter.rbc-time-column .rbc-timeslot-group {
-  padding: 0 20px !important;
+  padding: 0px 20px !important;
 }
 
 .rbc-timeslot-group {
@@ -75,7 +70,7 @@
 }
 
 .rbc-event {
-  border: none !important ;
+  border: none !important;
   color: black !important;
   padding: 10px !important;
   margin: 10px !important;
@@ -92,25 +87,22 @@
   background-color: #f2f1ff !important;
 }
 .rbc-event:nth-child(4) {
-  background-color: #e2f8ff !important;
+  background-color: #fdf2fb !important;
 }
 .rbc-event:nth-child(5) {
-  background-color: #fefce8 !important;
-}
-.rbc-event:nth-child(6) {
-  background-color: #f2f1ff !important;
-}
-.rbc-event:nth-child(7) {
   background-color: #e2f8ff !important;
 }
-.rbc-event:nth-child(8) {
+.rbc-event:nth-child(6) {
   background-color: #fefce8 !important;
 }
-.rbc-event:nth-child(9) {
+.rbc-event:nth-child(7) {
   background-color: #f2f1ff !important;
 }
+.rbc-event:nth-child(8) {
+  background-color: #fdf2fb !important;
+}
 
-.rbc-event-label {
+.rbc-event-label{
   color: gray !important;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
