feat: dark mode finished ✔

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,10 @@
   padding: 0px 20px !important;
 }
 
+.dark .rbc-toolbar-label {
+  color: black !important;
+}
+
 .rbc-btn-group:last-child {
   font-size: 13px !important;
 }
